Fix product card centering on mobile

--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -45,6 +45,7 @@
     position: relative;
     height: 300px;
     width: 225px;
+    outline: none;
 }
 
 .main-slider img {
